--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a>
     </h2>
     <img
-    height="200" src="../4.3 HTML Porfolio Project/assets/images/movie-ranking.png">
+    height="200" src="../assets/images/movie-ranking.png">
 
     <h2>
         <a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</a>
         </h2>
 
-    <img height="200" src="../4.3 HTML Porfolio Project/assets/images/Birthday.png">
+    <img height="200" src="../assets/images/Birthday.png">
 
     <hr>
     <a href="../4.3 HTML Porfolio Project/public/about.html">About Me</a>
