--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 
     <hr>
     <h2>
-    <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html">Movie Ranking Project</a>
+    <a href="./public/movie-ranking.html">Movie Ranking Project</a>
     </h2>
     <img
     height="200" src="./assets/images/movie-ranking.png">
 
     <h2>
-        <a href="../4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</a>
+        <a href="./public/birthday-invite.html">Birthday Invite Project</a>
         </h2>
 
     <img height="200" src="./assets/images/Birthday.png">
 
     <hr>
-    <a href="../4.3 HTML Porfolio Project/public/about.html">About Me</a>
-    <a href="../4.3 HTML Porfolio Project/public/contact.html"> Contact Me</a>
+    <a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html"> Contact Me</a>
 </body>
 </html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
